# rustcore

./: Cargo.toml  LICENSE  Makefile  README.md
docs/superpowers/plans/: 2026-06-11-rustcore.md
docs/superpowers/specs/: 2026-06-11-rustcore-design.md
examples/: config.rs  logger.rs  server.rs  settings.conf
src/: config.rs  lib.rs  logger.rs  sampler.rs  socket.rs  stats.rs
src/utils/: go_parse.rs  human_time.rs  human_time_unit.rs  mod.rs  outbound_ip.rs  regex_match.rs  secure_settings.rs  split_args.rs
tests/: advertising.rs  global_config.rs  gocore_compat.rs  socket_repl.rs  stats_http.rs
tests/fixtures/: settings.conf  settings_local.conf
