[package]
name = "rustcore"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Microservice toolkit: configuration, logging, admin socket, realtime statistics"

[dependencies]
regex = "1"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
url = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
tiny_http = "0.12"

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[[bin]]
name = "rcli"
path = "src/bin/rcli.rs"

[[bin]]
name = "rustcore-format"
path = "src/bin/rustcore-format.rs"
